Criando cadastro de equipamento

--- a/WebContent/site/Delegacia.xhtml
+++ b/WebContent/site/Delegacia.xhtml
@@ -54,7 +54,7 @@
 			</p:column>
 			
 			<p:column style="text-align: center; width:8%">
-					<h:link outcome="Equipamento" value="Ver computadores cadastrados">
+					<h:link outcome="Equipamento" value="Listar computadores cadastrados">
 					<f:param name="codigo"  value="#{delegacia.codigo}"/>
 					</h:link>
 			</p:column>
