Modificando views de Equipamento

--- a/WebContent/site/Equipamento.xhtml
+++ b/WebContent/site/Equipamento.xhtml
@@ -64,6 +64,7 @@
 					<h:link outcome="EquipamentoEdicao" value="Editar">
 					<i class="fa-desktop"></i>
 					<f:param name="codigo"  value="#{equipamento.codigo}"/>
+					<f:param name="codigo_delegacia"  value="#{equipamento.delegacia.codigo}"/>
 					</h:link>
 			</p:column>
 			
