--- a/WebContent/site/EquipamentoNovo.xhtml
+++ b/WebContent/site/EquipamentoNovo.xhtml
@@ -44,7 +44,11 @@
 
 					<p:outputLabel value="Ip" for="ip" />
 					<p:inputText id="ip" value="#{EquipamentoBean.equipamento.ip}"
-						placeholder="Aqui fica o ip do Equipamento" />
+						placeholder="Aqui fica o ip do Equipamento" >
+					<f:validateRegex pattern="^([01]?[0-9]?[0-9]|2[0-4][0-9]|25[0-5]).([01]?[0-9]?[0-9]|2[0-4][0-9]|25[0-5]).([01]?[0-9]?[0-9]|2[0-4][0-9]|25[0-5]).([01]?[0-9]?[0-9]|2[0-4][0-9]|25[0-5])" />	
+						
+					</p:inputText>	
+						
 
 
 					<p:outputLabel value="Delegacia" for="delegacia" />
