--- a/WebContent/site/EquipamentoEdicao.xhtml
+++ b/WebContent/site/EquipamentoEdicao.xhtml
@@ -21,7 +21,7 @@
 				</p:toolbarGroup>
 			</p:toolbar>
 			
-			<p:messages  closable="true"/>
+			<p:messages autoUpdate="true" closable="true" />
 			
 			<div class="ui-fluid">
 				<p:panelGrid id="capaPanel" columns="4" layout="grid" 
@@ -40,7 +40,9 @@
 					
 					<h:outputLabel value="Ip" for="ip" />
 					<p:inputText id="ip" value="#{EquipamentoBean.equipamento.ip}" placeholder="Aqui fica o ip do Equipamento" label="Ip">
+					<!-- 
 					<f:validateRegex pattern="^([01]?[0-9]?[0-9]|2[0-4][0-9]|25[0-5]).([01]?[0-9]?[0-9]|2[0-4][0-9]|25[0-5]).([01]?[0-9]?[0-9]|2[0-4][0-9]|25[0-5]).([01]?[0-9]?[0-9]|2[0-4][0-9]|25[0-5])" />
+					 -->
 					</p:inputText>					
 					
 					<h:outputLabel value="Delegacia" for="delegacia" />
