--- a/WebContent/site/EquipamentoNovo.xhtml
+++ b/WebContent/site/EquipamentoNovo.xhtml
@@ -23,7 +23,7 @@
 				</p:toolbarGroup>
 			</p:toolbar>
 
-			<p:messages autoUpdate="false" />
+			<p:messages autoUpdate="true" closable="true" />
 
 			<div class="ui-fluid">
 				<p:panelGrid id="capaPanel" columns="4" layout="grid"
@@ -45,8 +45,9 @@
 					<p:outputLabel value="Ip" for="ip" />
 					<p:inputText id="ip" value="#{EquipamentoBean.equipamento.ip}"
 						placeholder="Aqui fica o ip do Equipamento" >
+					<!-- 
 					<f:validateRegex pattern="^([01]?[0-9]?[0-9]|2[0-4][0-9]|25[0-5]).([01]?[0-9]?[0-9]|2[0-4][0-9]|25[0-5]).([01]?[0-9]?[0-9]|2[0-4][0-9]|25[0-5]).([01]?[0-9]?[0-9]|2[0-4][0-9]|25[0-5])" />	
-						
+					 -->	
 					</p:inputText>	
 						
 
