--- a/WebContent/site/EquipamentoEdicao.xhtml
+++ b/WebContent/site/EquipamentoEdicao.xhtml
@@ -2,25 +2,25 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-	xmlns:p="http://primefaces.org/ui"
-	template="../template/Layout.xhtml">
-	
-<f:metadata>
-	<f:viewParam name="codigo" value="#{EquipamentoBean.equipamento}" />
-</f:metadata>
-	
+	xmlns:p="http://primefaces.org/ui" template="../template/Layout.xhtml">
+
+	<f:metadata>
+		<f:viewParam name="codigo" value="#{EquipamentoBean.equipamento}" />
+	</f:metadata>
+
 	<ui:define name="content">
 		<h1 class="aw-page-title">Edição de Equipamento</h1>
-		
+
 		<h:form id="frm">
-			
+
 			<p:toolbar>
 				<p:toolbarGroup>
-					<p:commandButton value="Editar" action="#{EquipamentoBean.editar()}"
-						process="@this capaPanel" update="@form" />
+					<p:commandButton value="Editar"
+						action="#{EquipamentoBean.editar()}" process="@this capaPanel" />
+						
 				</p:toolbarGroup>
 			</p:toolbar>
-			
+
 			<p:messages autoUpdate="true" closable="true" />
 
 			<div class="ui-fluid">
@@ -43,12 +43,13 @@
 
 					<p:outputLabel value="Ip" for="ip" />
 					<p:inputText id="ip" value="#{EquipamentoBean.equipamento.ip}"
-						placeholder="Aqui fica o ip do Equipamento" >
+						placeholder="Aqui fica o ip do Equipamento">
 					</p:inputText>
 
 					<p:outputLabel value="Delegacia" for="delegacia" />
 					<p:selectOneMenu id="delegacia"
-						value="#{EquipamentoBean.equipamento.delegacia}" label="Delegacia" required="true">
+						value="#{EquipamentoBean.equipamento.delegacia}" label="Delegacia"
+						required="true">
 						<f:selectItem itemLabel="Selecione a Delegacia" />
 						<f:selectItems value="#{DelegaciaBean.listar()}" var="delegacia"
 							itemValue="#{delegacia}" itemLabel="#{delegacia.nome}" />
