--- a/WebContent/site/Delegacia.xhtml
+++ b/WebContent/site/Delegacia.xhtml
@@ -2,50 +2,64 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-	xmlns:p="http://primefaces.org/ui"
-	template="../template/Layout.xhtml">	
-	
+	xmlns:p="http://primefaces.org/ui" template="../template/Layout.xhtml">
+
 	<ui:define name="content">
 		<h1 class="aw-page-title">Delegacias Cadastradas</h1>
-		
+
 		<h:form id="frm">
-			
-			<p:toolbar>
+
+			<p:toolbar id="toolbar">
 				<p:toolbarGroup>
-					<p:commandButton value="Novo" icon="ui-icon-plus"  action="#{DelegaciaBean.novo()}"
-						process="@this" />
+					<p:commandButton value="Novo" icon="ui-icon-plus"
+						action="#{DelegaciaBean.novo()}" process="@this" />
+
+					<span class="ui-separator"> <span
+						class="ui-icon ui-icon-grip-dotted-vertical" />
+					</span>
+
+					<p:commandButton  value="Editar" icon="ui-icon-pencil" title="Editar"
+						action="#{DelegaciaBean.edicao()}" process="@this"
+						disabled="#{DelegaciaBean.delegaciaSelecionada == null}" >
+						<f:setPropertyActionListener
+							value="#{DelegaciaBean.delegaciaSelecionada}"
+							target="#{DelegaciaBean.delegacia}" />
+					</p:commandButton>
+
+					<span class="ui-separator"> <span
+						class="ui-icon ui-icon-grip-dotted-vertical" />
+					</span>
+
+					<p:commandButton value="Excluir" icon="ui-icon-trash" title="Excluir" 
+						process="@this" update="tabela_delegacias toolbar"
+						action="#{DelegaciaBean.excluir}"
+						disabled="#{DelegaciaBean.delegaciaSelecionada == null}" />
+
+
 				</p:toolbarGroup>
 			</p:toolbar>
-			
-			<p:dataTable var="delegacia" value="#{DelegaciaBean.listar()}"
-			frame="box" rules="all" cellpadding="3"
-				width="100%" headerClass="cabecalho" rowClasses="cor-sim, cor-nao"
-				columnClasses="nome" emptyMessage="Nenhuma delegacia Cadastrada">				
-				
-			<p:column filterBy="#{delegacia.nome}"  style="text-align: center; width:5%" 
-					filterMatchMode="startsWith">
+
+			<p:dataTable id="tabela_delegacias" var="delegacia"
+				value="#{DelegaciaBean.listaDelegacia}" frame="box" rules="all"
+				cellpadding="3" width="100%" headerClass="cabecalho"
+				rowClasses="cor-sim, cor-nao" columnClasses="nome"
+				emptyMessage="Nenhuma delegacia Cadastrada"
+				selection="#{DelegaciaBean.delegaciaSelecionada}"
+				selectionMode="single" rowKey="#{delegacia.codigo}">
+
+				<p:ajax event="rowSelect" update=":frm:toolbar" />
+				<p:ajax event="rowUnselect" update=":frm:toolbar" />
+
+				<p:column filterBy="#{delegacia.nome}"
+					style="text-align: center; width:5%" filterMatchMode="startsWith">
 					<f:facet name="header">
 						<h:outputText value="Delegacia" />
 					</f:facet>
 					<h:outputText value="#{delegacia.nome}" />
-			</p:column>
-			
-			<p:column style="text-align: center; width:3%">
-					<h:link outcome="DelegaciaEdicao" value="Editar">
-					<i class="icon-edit"></i>
-					<f:param name="codigo"  value="#{delegacia.codigo}"/>
-					</h:link>
-			</p:column>
-			
-			<p:column style="text-align: center; width:3%">
-				<h:commandLink value="Excluir"
-				 action="#{DelegaciaBean.excluir(delegacia)}"
-				 onclick="if (!confirm('Confirmar a exclusão desta Delegacia ? ')) return false"/>
-				 <i class="icon-remove-sign"></i>
-			</p:column>
-			
-			</p:dataTable>		
+				</p:column>
+
+			</p:dataTable>
 		</h:form>
 	</ui:define>
-	
+
 </ui:composition>
