--- a/WebContent/site/Pessoa.xhtml
+++ b/WebContent/site/Pessoa.xhtml
@@ -19,13 +19,12 @@
 						class="ui-icon ui-icon-grip-dotted-vertical" />
 					</span>
 
-					<p:commandButton  value="Editar" icon="ui-icon-pencil" title="Editar"
-						action="#{PessoaBean.edicao()}" process="@this"
-						disabled="#{PessoaBean.pessoaSelecionada == null}" >
-						<f:setPropertyActionListener
-							value="#{PessoaBean.pessoaSelecionada}"
-							target="#{PessoaBean.pessoa}" />
-					</p:commandButton>
+					<p:commandLink  value="Editar" 
+						title="Editar" action="#{PessoaBean.edicao()}"
+						process="@this"
+						disabled="#{PessoaBean.pessoaSelecionada == null}">
+						<i class="fa fa-search" aria-hidden="true"></i>
+					</p:commandLink>
 
 					<span class="ui-separator"> <span
 						class="ui-icon ui-icon-grip-dotted-vertical" />
