--- a/WebContent/site/EquipamentoNovo.xhtml
+++ b/WebContent/site/EquipamentoNovo.xhtml
@@ -21,7 +21,7 @@
 				</p:toolbarGroup>
 			</p:toolbar>
 
-			<p:messages autoUpdate="true" closable="true" />
+			<p:messages for="message" showDetail="true" autoUpdate="true" closable="true" />
 
 			<div class="ui-fluid">
 				<p:panelGrid id="capaPanel" columns="4" layout="grid"
