Falta apenas validação de notnull

--- a/WebContent/site/EquipamentoEdicao.xhtml
+++ b/WebContent/site/EquipamentoEdicao.xhtml
@@ -21,17 +21,19 @@
 				</p:toolbarGroup>
 			</p:toolbar>
 
-			<p:messages  showDetail="true" autoUpdate="true" closable="true" />
+			<p:messages showDetail="true" autoUpdate="true" closable="true" />
 
 			<div class="ui-fluid">
-				<p:panelGrid id="capaPanel" columns="4" layout="grid"
+				<p:panelGrid id="capaPanel" columns="6" layout="grid"
 					style="margin-top: 20px; margin-bottom: 40px"
 					styleClass="panelgrid-noborder"
-					columnClasses="ui-grid-col-2, ui-grid-col-4, ui-grid-col-2, ui-grid-col-4">
+					columnClasses="ui-grid-col-2, ui-grid-col-3, ui-grid-col-1, ui-grid-col-2, ui-grid-col-3, ui-grid-col-1">
 
 					<p:outputLabel value="Nome" for="nome" />
 					<p:inputText id="nome" value="#{EquipamentoBean.equipamento.nome}"
-						placeholder="Aqui fica o nome do Equipamento" />
+						placeholder="Aqui fica o nome do Equipamento" >
+					</p:inputText>
+					<p:messages for="message" showDetail="true" autoUpdate="true" closable="true" />	
 
 					<p:outputLabel value="Descricao" for="descricao" />
 					<p:selectOneMenu id="descricao"
@@ -40,22 +42,23 @@
 						<f:selectItem itemLabel="Computador" itemValue="Computador" />
 						<f:selectItem itemLabel="Impressora" itemValue="Impressora" />
 					</p:selectOneMenu>
-
+					<p:messages for="message" showDetail="true" autoUpdate="true" closable="true" />
 
 					<p:outputLabel value="Ip" for="ip" />
 					<p:inputText id="ip" value="#{EquipamentoBean.equipamento.ip}"
 						placeholder="Aqui fica o ip do Equipamento">
 					</p:inputText>
+					<p:messages for="message" showDetail="true" autoUpdate="true" closable="true" />
 
 					<p:outputLabel value="Delegacia" for="delegacia" />
 					<p:selectOneMenu id="delegacia"
 						value="#{EquipamentoBean.equipamento.delegacia}" label="Delegacia"
 						required="true">
-						<f:selectItem itemLabel="Selecione a Delegacia" />
+						<f:selectItem itemLabel="Selecione a Delegacia" noSelectionOption="true"/>
 						<f:selectItems value="#{DelegaciaBean.listar()}" var="delegacia"
 							itemValue="#{delegacia}" itemLabel="#{delegacia.nome}" />
 					</p:selectOneMenu>
-
+					<p:messages for="message" showDetail="true" autoUpdate="true" closable="true" />
 
 				</p:panelGrid>
 			</div>
