--- a/WebContent/site/PessoaEdicao.xhtml
+++ b/WebContent/site/PessoaEdicao.xhtml
@@ -17,11 +17,10 @@
 			<p:toolbar>
 				<p:toolbarGroup>
 					<p:commandButton value="Editar" action="#{PessoaBean.editar()}"
-						process="@this capaPanel" update="@form" />
+						process="@this capaPanel" />
 				</p:toolbarGroup>
 			</p:toolbar>
 			
-			<p:messages autoUpdate="false" />
 			
 			<div class="ui-fluid">
 				<p:panelGrid id="capaPanel" columns="4" layout="grid" 
@@ -37,7 +36,7 @@
 					
 					<p:outputLabel value="Grupo" for="grupo" />
 					<p:selectOneMenu id="grupo" value="#{PessoaBean.pessoa.grupo}"  label="Grupo">
-						<f:selectItem itemLabel="Selecione o grupo" />
+						<f:selectItem itemLabel="Selecione o grupo" noSelectionOption="true"/>
 						<f:selectItems value="#{GrupoBean.listar()}" var="grupo" itemValue="#{grupo}" itemLabel="#{grupo.nome}"/>
 					</p:selectOneMenu>
 					
