--- a/src/main/webapp/site/index.xhtml
+++ b/src/main/webapp/site/index.xhtml
@@ -3,7 +3,7 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui"
-	template="../template/Layout.xhtml">
+	template="/template/Layout.xhtml">
 	
 	<ui:define name="content">
 		<h1 class="aw-page-title">Pagina inicial</h1>
