--- a/WebContent/site/Pessoa.xhtml
+++ b/WebContent/site/Pessoa.xhtml
@@ -12,6 +12,7 @@
 			
 			<p:toolbar id="toolbar">
 				<p:toolbarGroup>
+					
 					<p:commandButton value="Novo" icon="ui-icon-plus"  action="#{PessoaBean.novo()}"
 						process="@this" />
 						
@@ -19,12 +20,10 @@
 						class="ui-icon ui-icon-grip-dotted-vertical" />
 					</span>
 
-					<p:commandLink  value="Editar" 
-						title="Editar" action="#{PessoaBean.edicao()}"
-						process="@this"
-						disabled="#{PessoaBean.pessoaSelecionada == null}">
-						<i class="fa fa-search" aria-hidden="true"></i>
-					</p:commandLink>
+					<p:commandButton value="Editar" icon="ui-icon-pencil" title="Editar" 
+						process="@this" 
+						action="#{PessoaBean.edicao()}"
+						disabled="#{PessoaBean.pessoaSelecionada == null}" />
 
 					<span class="ui-separator"> <span
 						class="ui-icon ui-icon-grip-dotted-vertical" />
