--- a/WebContent/site/Equipamento.xhtml
+++ b/WebContent/site/Equipamento.xhtml
@@ -31,7 +31,8 @@
 						title="Excluir" process="@this"
 						update="tabela_equipamentos toolbar"
 						action="#{EquipamentoBean.excluir}"
-						disabled="#{EquipamentoBean.equipamentoSelecionado == null}" />
+						disabled="#{EquipamentoBean.equipamentoSelecionado == null}" 
+						onclick="if (!confirm('Deseja deletar este Equipamento ? ')) return false"/>
 						
 				</p:toolbarGroup>
 			</p:toolbar>
