--- a/src/main/webapp/site/Delegacia.xhtml
+++ b/src/main/webapp/site/Delegacia.xhtml
@@ -2,7 +2,8 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-	xmlns:p="http://primefaces.org/ui" template="../template/Layout.xhtml">
+	xmlns:p="http://primefaces.org/ui" 
+	template="/template/Layout.xhtml">
 
 	<ui:define name="content">
 		<h1 class="aw-page-title">Delegacias Cadastradas</h1>
@@ -12,16 +13,16 @@
 			<p:toolbar id="toolbar">
 				<p:toolbarGroup>
 					<p:commandButton value="Novo" icon="ui-icon-plus"
-						action="#{DelegaciaBean.novo()}" process="@this" />
+						action="#{delegaciaBean.novo()}" process="@this" />
 
 					<span class="ui-separator"> <span
 						class="ui-icon ui-icon-grip-dotted-vertical" />
 					</span>
 
 					<p:commandLink  value="Editar" 
-						title="Editar" action="#{DelegaciaBean.edicao()}"
+						title="Editar" action="#{delegaciaBean.edicao()}"
 						process="@this"
-						disabled="#{DelegaciaBean.delegaciaSelecionada == null}">
+						disabled="#{delegaciaBean.delegaciaSelecionada == null}">
 						<i class="fa fa-search" aria-hidden="true"></i>
 					</p:commandLink>
 
@@ -31,8 +32,8 @@
 
 					<p:commandButton value="Excluir" icon="ui-icon-trash" title="Excluir" 
 						process="@this" update="tabela_delegacias toolbar"
-						action="#{DelegaciaBean.excluir}"
-						disabled="#{DelegaciaBean.delegaciaSelecionada == null}" />
+						action="#{delegaciaBean.excluir}"
+						disabled="#{delegaciaBean.delegaciaSelecionada == null}" />
 					
 
 
@@ -40,11 +41,11 @@
 			</p:toolbar>
 
 			<p:dataTable id="tabela_delegacias" var="delegacia"
-				value="#{DelegaciaBean.listaDelegacia}" frame="box" rules="all"
+				value="#{delegaciaBean.listaDelegacia}" frame="box" rules="all"
 				cellpadding="3" width="100%" headerClass="cabecalho"
 				rowClasses="cor-sim, cor-nao" columnClasses="nome"
 				emptyMessage="Nenhuma delegacia Cadastrada"
-				selection="#{DelegaciaBean.delegaciaSelecionada}"
+				selection="#{delegaciaBean.delegaciaSelecionada}"
 				selectionMode="single" rowKey="#{delegacia.codigo}">
 
 				<p:ajax event="rowSelect" update=":frm:toolbar" />
