--- a/src/main/webapp/site/Grupo.xhtml
+++ b/src/main/webapp/site/Grupo.xhtml
@@ -13,7 +13,7 @@
 			
 			<p:toolbar id="toolbar">
 				<p:toolbarGroup>
-					<p:commandButton value="Novo" icon="ui-icon-plus"  action="#{GrupoBean.novo()}"
+					<p:commandButton value="Novo" icon="ui-icon-plus"  action="#{grupoBean.novo()}"
 						process="@this" />
 						
 					<span class="ui-separator"> <span
@@ -21,9 +21,9 @@
 					</span>
 
 					<p:commandLink  value="Editar" 
-						title="Editar" action="#{GrupoBean.edicao()}"
+						title="Editar" action="#{grupoBean.edicao()}"
 						process="@this"
-						disabled="#{GrupoBean.grupoSelecionado == null}">
+						disabled="#{grupoBean.grupoSelecionado == null}">
 						<i class="fa fa-search" aria-hidden="true"></i>
 					</p:commandLink>
 
@@ -33,17 +33,17 @@
 
 					<p:commandButton value="Excluir" icon="ui-icon-trash" title="Excluir" 
 						process="@this" update="tabela_grupos toolbar"
-						action="#{GrupoBean.excluir}"
-						disabled="#{GrupoBean.grupoSelecionado == null}" />	
+						action="#{grupoBean.excluir}"
+						disabled="#{grupoBean.grupoSelecionado == null}" />	
 						
 				</p:toolbarGroup>
 			</p:toolbar>
 			
-			<p:dataTable id="tabela_grupos" var="grupo" value="#{GrupoBean.listar()}"
+			<p:dataTable id="tabela_grupos" var="grupo" value="#{grupoBean.listar()}"
 			frame="box" rules="all" cellpadding="3"
 				width="100%" headerClass="cabecalho" rowClasses="cor-sim, cor-nao"
 				columnClasses="nome" emptyMessage="Nenhum grupo Cadastrado"
-				selection="#{GrupoBean.grupoSelecionado}"
+				selection="#{grupoBean.grupoSelecionado}"
 				selectionMode="single" rowKey="#{grupo.codigo}">	
 			
 			<p:ajax event="rowSelect" update=":frm:toolbar" />
