Implementando o converter só que ainda está com uns problemas

--- a/src/main/webapp/site/Delegacia.xhtml
+++ b/src/main/webapp/site/Delegacia.xhtml
@@ -41,7 +41,7 @@
 			</p:toolbar>
 
 			<p:dataTable id="tabela_delegacias" var="delegacia"
-				value="#{delegaciaBean.listaDelegacia}" frame="box" rules="all"
+				value="#{delegaciaBean.listar()}" frame="box" rules="all"
 				cellpadding="3" width="100%" headerClass="cabecalho"
 				rowClasses="cor-sim, cor-nao" columnClasses="nome"
 				emptyMessage="Nenhuma delegacia Cadastrada"
