--- a/src/main/webapp/Edicao/DelegaciaEdicao.xhtml
+++ b/src/main/webapp/Edicao/DelegaciaEdicao.xhtml
@@ -3,7 +3,7 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui"
-	template="../template/Layout.xhtml">	
+	template="/WEB-INF/template/Layout.xhtml">	
 	
 <f:metadata>
 	<f:viewParam name="codigo" value="#{delegaciaBean.delegacia}" />
