--- a/src/main/webapp/Edicao/GrupoEdicao.xhtml
+++ b/src/main/webapp/Edicao/GrupoEdicao.xhtml
@@ -2,7 +2,8 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-	xmlns:p="http://primefaces.org/ui" template="../template/Layout.xhtml">
+	xmlns:p="http://primefaces.org/ui" 
+	template="/WEB-INF/template/Layout.xhtml">
 
 	<f:metadata>
 		<f:viewParam name="codigo" value="#{grupoBean.grupo}" />
