--- a/src/main/webapp/Edicao/PessoaEdicao.xhtml
+++ b/src/main/webapp/Edicao/PessoaEdicao.xhtml
@@ -4,7 +4,7 @@
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:o="http://omnifaces.org/ui"
-	template="../template/Layout.xhtml">
+	template="/WEB-INF/template/Layout.xhtml">
 
 <f:metadata>
 	<o:viewParam name="codigo" value="#{pessoaBean.pessoa}" />
