--- a/src/main/webapp/Edicao/PessoaEdicao.xhtml
+++ b/src/main/webapp/Edicao/PessoaEdicao.xhtml
@@ -7,7 +7,7 @@
 	template="/WEB-INF/template/Layout.xhtml">
 
 <f:metadata>
-	<o:viewParam name="codigo" value="#{pessoaBean.pessoa}" />
+	<f:viewParam name="codigo" value="#{pessoaBean.pessoa}" />
 </f:metadata>
 	
 	<ui:define name="content">
@@ -36,7 +36,7 @@
 					<p:password id="senha" value="#{pessoaBean.pessoa.senha}" />
 					
 					<p:outputLabel value="Grupo" for="grupo" />
-					<p:selectManyCheckbox id="grupo" value="#{pessoaBean.pessoa.grupos}" converter="grupoConverter" layout="responsive" columns="2">
+					<p:selectManyCheckbox id="grupo" value="#{pessoaBean.pessoa.grupos}" layout="responsive" columns="2">
         			<f:selectItems value="#{grupoBean.listar()}" var="grupos" itemValue="#{grupos}" itemLabel="#{grupos.nome}"/>
     				</p:selectManyCheckbox>					
 					
