--- a/src/main/webapp/Edicao/PessoaEdicao.xhtml
+++ b/src/main/webapp/Edicao/PessoaEdicao.xhtml
@@ -36,8 +36,8 @@
 					<p:password id="senha" value="#{pessoaBean.pessoa.senha}" />
 					
 					<p:outputLabel value="Grupo" for="grupo" />
-					<p:selectManyCheckbox id="grupo" value="#{pessoaBean.pessoa.grupos}" layout="responsive" columns="2">
-        			<f:selectItems value="#{grupoBean.listar()}" var="grupos" itemValue="#{grupos}" itemLabel="#{grupos.nome}"/>
+					<p:selectManyCheckbox id="grupo" value="#{pessoaBean.pessoa.grupos}" converter="grupoConverter" layout="responsive" columns="2">
+        			<f:selectItems value="#{pessoaBean.listaGrupos}" var="grupos" itemValue="#{grupos}" itemLabel="#{grupos.nome}"/>
     				</p:selectManyCheckbox>					
 					
 				</p:panelGrid>
